--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
